--- a/turkframe/templates/exp.html
+++ b/turkframe/templates/exp.html
@@ -39,6 +39,7 @@
 
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="/static/css/frame.css" type="text/css"/>
     </head>
     <body>
 	    <noscript>
