--- a/turkframe/templates/exp.html
+++ b/turkframe/templates/exp.html
@@ -31,10 +31,31 @@
 		<script src="/static/js/utils.js" type="text/javascript"> </script>
 		<script src="/static/js/psiturk.js" type="text/javascript"> </script>
 
-		<!-- task.js is where you experiment code actually lives 
-			for most purposes this is where you want to focus debugging, development, etc...
-		-->
-		<script src="/static/js/task.js" type="text/javascript"> </script>
+		<!-- frame.js is where Turkframe does its work -->
+		<script src="/static/js/frame.js" type="text/javascript"> </script>
+		
+		<!-- *** CUSTOMIZE THIS SCRIPT so that Turkframe can communicate with your experiment -->
+		<script type="text/javascript">
+			
+			// The URL to your experiment. Must be ready to accept new elements appended to
+			// its query string (i.e. ending with `?` or `&` as appropriate). PsiTurk's UID,
+			// condition, and counterbalance values will be appended and accessible via turkframe.js.
+			var tf_experimentUrl = "http://localhost:5000?";
+			
+			// Optional: Register a new handler for a particular type of message from your experiment
+			tf_registerMessageHandler({
+				message: "participant status",
+				handler: function(data)
+				{
+					var status = data["status"];
+					console.log("I'm doing science and I'm " + status);
+				}
+			});
+			
+			// Kick off Turkframe and load your experiment
+			tf_init();
+			
+		</script>
 
         <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
         <link rel="stylesheet" href="/static/css/style.css" type="text/css" />
